ENH: Multiple enhancements (zlib, testing, Windows binaries) (#1)
* ENH: Build windows binaries
COMP: Switch to ITK zlib

Using ITK zlib avoids having to build zlib on Windows. Appears to build fine on Mac OS also.

* ENH: Run tests on release

* BUG: Fixing test config. Windows requires ctest -C

--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -96,6 +96,9 @@ jobs:
           cmake \
             -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} \
             -G "${{ matrix.config.generators }}" \
+            -DBUILD_TESTING=ON \
+            -DRUN_SHORT_TESTS=ON \
+            -DRUN_LONG_TESTS=OFF \
             -DCMAKE_INSTALL_PREFIX:PATH=${{ runner.temp }}/install/ants-${{ env.ANTS_VERSION }} \
             ${GITHUB_WORKSPACE}
       - name: Build
@@ -104,6 +107,12 @@ jobs:
         run: |
           cd build
           cmake --build . --config ${{ matrix.config.build_type }} --parallel
+      - name: Test
+        shell: bash
+        working-directory: ${{ runner.temp }}
+        run: |
+          cd build/ANTS-build
+          ctest
       - name: Install
         shell: bash
         working-directory: ${{ runner.temp }}
