--- a/.github/workflows/ci-docker-nopush.yml
+++ b/.github/workflows/ci-docker-nopush.yml
@@ -15,11 +15,17 @@ on:
       - ready_for_review
 
 concurrency:
-  group: ${{ github.workflow }}-${{
-      startsWith(github.ref, 'refs/tags/') && 'tag-' ||
-      startsWith(github.ref, 'refs/heads/') && 'branch-' ||
-      'pr-'}}${{ github.ref_name }}
-  cancel-in-progress: ${{ !startsWith(github.ref, 'refs/tags/') }}
+  group: >-
+        ${{
+          github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && 'tag-' ||
+          github.event_name == 'pull_request' && 'pr-' ||
+          startsWith(github.ref, 'refs/heads/master') && 'master-'
+        }}${{
+          github.event_name == 'pull_request' && github.event.pull_request.number ||
+          github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && github.ref_name ||
+          startsWith(github.ref, 'refs/heads/master') && github.run_id
+        }}
+  cancel-in-progress: ${{ !(github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')) }}
 
 jobs:
   docker:
