CI: Drop v from release versions
These were originally part of version labels but now we use X.Y.Z not vX.Y.Z. Makes sense to do the same for Dockerhub

--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -32,6 +32,9 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: antsx/ants
+          tags: |
+            type=ref,event=tag,enable=true,strip-prefix=v
+            type=ref,event=branch
       -
         name: Login to DockerHub
         if: github.event_name != 'pull_request'
