BUG: tag for PRs

--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -35,6 +35,7 @@ jobs:
           tags: |
             type=ref,event=tag,enable=true,strip-prefix=v
             type=ref,event=branch
+            type=ref,event=pr,prefix=pr-
       -
         name: Login to DockerHub
         if: github.event_name != 'pull_request'
