CI: Docker tags
Trying to be more consistent with versioning by using `X.Y.Z` not `vX.Y.Z`

--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -32,10 +32,6 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: antsx/ants
-          tags: |
-            type=ref,event=tag,enable=true,strip-prefix=v
-            type=ref,event=branch
-            type=ref,event=pr,prefix=pr-
       -
         name: Login to DockerHub
         if: github.event_name != 'pull_request'
@@ -44,13 +40,19 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Edit tag for releases
+        run: |
+          META_TAG=${{ steps.meta.outputs.tags }}
+          STRIPPED_TAG=$( echo "${META_TAG#v}" )
+          echo "DOCKER_TAG=${STRIPPED_TAG}" >> $GITHUB_ENV
+      -
         name: Build and load (PR) or push (commit/tag)
         uses: docker/build-push-action@v5
         with:
             context: .
             push: ${{ github.event_name != 'pull_request' }}
             load: ${{ github.event_name == 'pull_request' }}
-            tags: ${{ steps.meta.outputs.tags }}
+            tags: ${{ env.DOCKER_TAG }},${{ steps.meta.outputs.tags }}
             labels: ${{ steps.meta.outputs.labels }}
       -
         name: Export Docker image for PR
