CI: Add alma9 to releases

--- a/.github/workflows/release-docker-binaries.yml
+++ b/.github/workflows/release-docker-binaries.yml
@@ -22,6 +22,15 @@ jobs:
             generators: "Unix Makefiles"
           }
         - {
+            name: "almalinux-9-GCC",
+            os_desc: almalinux9,
+            image: "almalinux:9",
+            build_type: "Release",
+            cc: "gcc",
+            cxx: "g++",
+            generators: "Unix Makefiles"
+          }
+        - {
             name: "Ubuntu-18.04-GCC",
             os_desc: ubuntu18.04,
             image: "ubuntu:18.04",
